# waiting-time-analysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  build_push.bash  build_push.sh  handoff.ipynb  handoff_1.ipynb  handoff_2.ipynb  handoff_3.ipynb  handoff_4.ipynb  handover.ipynb  install.sh  install_python.sh  install_r.sh  main.py  process-waste_ci.dockerfile  pyproject.toml  pytest.ini  rlang.dockerfile  run_analisys.sh  run_analysis.sh  setup.py
.github/workflows/: build.yml  main.yml
src/process_waste/: __init__.py  activity_transitions.py  cli.py  cte_impact.py  helpers.py  main.py
src/process_waste/calendar/: calendar.py  intervals.py
src/process_waste/core/: core.py
src/process_waste/transportation/: __init__.py  handoff.py  pingpong.py  transportation.py
src/process_waste/waiting_time/: analysis.py  batching.py  contention.py  prioritization_and_contention.py  resource.py  resource_unavailability.py
src/waste/: __init__.py  cli.py  core.py  handoff.py  main.py  pingpong.py
src/waste/core/: core.py
src/waste/handoff/: __init__.py  handoff.py
src/waste/pingpong/: __init__.py  pingpong.py
src/waste/transportation/: __init__.py  handoff.py  pingpong.py  transportation.py
src/wta/: __init__.py  activity_transitions.py  cli.py  cte_impact.py  helpers.py  main.py  transitions_report.py
src/wta/calendar/: calendar.py
src/wta/calendars/: calendars.py
src/wta/waiting_time/: analysis.py  batching.py  prioritization_and_contention.py  resource_unavailability.py
tests/: conftest.py  test_calendar.py  test_cli.py  test_concurrency_oracle.py  test_core.py  test_enabled_timestamp.py  test_handoff.py  test_helpers.py  test_icpm.py  test_intervals.py  test_pingpong.py  test_resource.py  test_transitions_report.py  test_transportation.py  test_waiting_time.py
tests/assets/: BIMP_example.csv  Production.csv  ProductionCase44.csv  PurchasingExampleCase1.csv  PurchasingExampleModified.csv  PurchasingExample_calendar.json  bimp-example_case_21.csv  bimp-example_case_272.csv  bimp-example_case_293.csv  bimp-example_case_409.csv  bimp-example_case_409_enabled.csv  bimp-example_case_409_enabled_2.csv  bimp-example_case_444.csv  bimp-example_case_handoff_1.csv  bimp-example_case_handoff_2.csv  bimp-example_case_handoff_3.csv  bimp-example_case_handoff_4.csv  bimp-example_case_handoff_5.csv  bimp-example_case_handoff_6.csv  bimp-example_handoffs.csv  column_mapping.csv  double_ping_pong_case.csv  manual_log_5.csv  non_processing_intervals.xes  non_processing_intervals_2.csv  non_processing_intervals_3.csv  ping_pong_case.csv  ping_pong_case_fake.csv  prioritization.csv  prioritization_and_contention.csv  resource_contention.csv  undifferentiated_pool.csv
tests/assets/caise/handoff-logs/: handoff-test.csv  handoff-test_expected.csv  manual_log_1.csv  manual_log_3.csv  manual_log_3_expected.csv  manual_log_4.csv  manual_log_5.csv  manual_log_5_expected.csv
tests/assets/icpm/handoff-logs/: LoanApp_fewRes_24-7_noTimers.CSV  LoanApp_fewRes_24-7_noTimers_handoff.csv  LoanApp_fewRes_24-7_timers.CSV  LoanApp_fewRes_24-7_timers_handoff.csv  LoanApp_fewRes_9-5_noTimers.CSV  LoanApp_fewRes_9-5_noTimers.bpmn  LoanApp_fewRes_9-5_noTimers_handoff.csv  LoanApp_fewRes_9-5_timers.CSV  LoanApp_fewRes_9-5_timers.bpmn  LoanApp_fewRes_9-5_timers_handoff.csv  LoanApp_infRes_24-7_noTimers.CSV  LoanApp_infRes_24-7_noTimers_handoff.csv  LoanApp_infRes_24-7_timers.CSV  LoanApp_infRes_24-7_timers.bpmn  LoanApp_infRes_24-7_timers_handoff.csv  LoanApp_infRes_9-5_noTimers.CSV  LoanApp_infRes_9-5_noTimers.bpmn  LoanApp_infRes_9-5_noTimers_handoff.csv  LoanApp_infRes_9-5_timers.CSV  LoanApp_infRes_9-5_timers_handoff.csv  artificial_all_types.csv  handoff-test.csv  handoff-test_expected.csv  manual_log_1_expected.csv  manual_log_2.csv  manual_log_2_expected.csv  manual_log_2_handoff.csv  manual_log_3_handoff.csv  manual_log_4_expected.csv  manual_log_5_handoff.csv
tests/assets/icpm/input/: LoanApp_fewRes_24-7_noTimers.CSV  LoanApp_fewRes_24-7_noTimers.bpmn  (+18 more)
(+16 files in other folders)
