[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wta"
version = "1.3.0"
description = "Waiting time analysis of activity transitions in event logs"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>", "David Chapela de la Campa <david.chapela@ut.ee>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
wta = "wta.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
click = "^8.0.4"
pandas = "^1.4.1"
pytest = "^7.1.1"
tqdm = "^4.63.0"
pytest-cov = "^3.0.0"
wittgenstein = [
    { git = "https://github.com/david-chapela/wittgenstein.git", branch = "master" }
]
pytest-xdist = "^2.5.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[tool.pytest.ini_options]
testpaths = "tests"
markers = [
    "log_path: mark a log path",
    "integration: mark an integration test",
    "icpm: mark a test for ICPM",
]

[tool.coverage.run]
relative_files = true

[virtualenvs]
in-project = true
