[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wta"
version = "1.3.6"
description = "Waiting time analysis of activity transitions in event logs"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>", "David Chapela de la Campa <david.chapela@ut.ee>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
wta = "wta.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
click = "^8.0.4"
pandas = "2.0.1"
pytest = "^7.1.1"
tqdm = "^4.63.0"
pendulum = "^2.1.2"
diffresbp-simulator = { git = "https://github.com/AutomatedProcessImprovement/Prosimos.git", rev = "ab4394c066353ecca57dc5005e0f29ef34458c57" }
batch-processing-discovery = { git = "https://github.com/AutomatedProcessImprovement/batch-processing-discovery.git", branch = "main" }
start-time-estimator = "^1.10.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"

[tool.pytest.ini_options]
testpaths = "tests"
markers = [
    "log_path: mark a log path",
    "integration: mark an integration test",
    "icpm: mark a test for ICPM",
]

[tool.coverage.run]
relative_files = true

[virtualenvs]
in-project = true
